--- a/Android_App_Code/app/src/main/res/drawable-v24/button_outline.xml
+++ b/Android_App_Code/app/src/main/res/drawable-v24/button_outline.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <solid android:color="#00FFFFFF" />
     <stroke android:color="@color/primary" android:width="0.75dp"/>
-    <corners android:radius="@dimen/corner_radius"/>
+    <corners android:radius="@dimen/dashboard_button_corner_radius"/>
 </shape>
