--- a/Android_App_Code/app/src/main/res/layout/layout_member.xml
+++ b/Android_App_Code/app/src/main/res/layout/layout_member.xml
@@ -5,15 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <com.google.android.material.card.MaterialCardView
 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/dashBoardButtonColor"
-        app:cardCornerRadius="10sp"
-        app:cardElevation="1dp"
-        app:cardPreventCornerOverlap="true"
-        app:cardUseCompatPadding="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -22,24 +14,20 @@
             android:orientation="horizontal"
             android:padding="10dp">
 
-            <!--
-            <TextView
-                android:id="@+id/group_index"
-                android:layout_width="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_height="wrap_content"
-                android:text="@string/_1"
-                android:fontFamily="@font/ibmplexsansregular"
-                android:textColor="@color/textPrimary"
-                android:textSize="20sp"
-                android:layout_marginStart="10dp"/>
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profile_image"
+                android:layout_width="50sp"
+                android:layout_height="50sp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_profile" />
 
-                -->
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_marginStart="10sp"
+                android:layout_gravity="center_vertical">
                 <TextView
                     android:id="@+id/name"
                     android:layout_width="wrap_content"
@@ -47,16 +35,7 @@
                     android:text="Aryaman Awasthi"
                     android:fontFamily="@font/ibmplexsansmedium"
                     android:textColor="@color/textPrimary"
-                    android:textSize="25sp"
-                    android:layout_marginStart="10dp"/>
-                <TextView
-                    android:id="@+id/registration_Number"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="21BEE0010"
-                    android:fontFamily="@font/ibmplexsanslight"
-                    android:textColor="@color/textPrimary"
-                    android:textSize="18sp"
+                    android:textSize="20sp"
                     android:layout_marginStart="10dp"/>
 
 
@@ -68,10 +47,10 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Major: "
+                        android:text="Major:"
                         android:fontFamily="@font/ibmplexsansregular"
                         android:textColor="@color/textSecondary"
-                        android:textSize="18sp"
+                        android:textSize="15sp"
                         android:layout_marginStart="10dp"/>
 
                     <TextView
@@ -79,9 +58,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/sample_major"
-                        android:fontFamily="@font/ibmplexsansmedium"
-                        android:textColor="@color/textPrimary"
-                        android:textSize="18sp"
+                        android:fontFamily="@font/ibmplexsansregular"
+                        android:textColor="@color/textSecondary"
+                        android:textSize="15sp"
                         android:layout_marginStart="5dp"/>
 
                 </LinearLayout>
@@ -89,5 +68,11 @@
             </LinearLayout>
 
         </LinearLayout>
-    </com.google.android.material.card.MaterialCardView>
+
+<!--    <View-->
+<!--        android:id="@+id/fView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0.75sp"-->
+<!--        android:background="@color/primary"/>-->
+
 </LinearLayout>
