--- a/Android_App_Code/app/src/main/res/layout/activity_group_details.xml
+++ b/Android_App_Code/app/src/main/res/layout/activity_group_details.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.GroupDetails"
-    android:background="@color/background">
+    android:background="@color/background"
+    android:id="@+id/parentRelative">
 
     <RelativeLayout
         android:layout_marginTop="25sp"
