--- a/Android_App_Code/app/src/main/res/layout/layout_member.xml
+++ b/Android_App_Code/app/src/main/res/layout/layout_member.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/button_dashboard">
 
 
 
@@ -66,6 +67,8 @@
                 </LinearLayout>
 
             </LinearLayout>
+
+
 
         </LinearLayout>
 
