--- a/Android_App_Code/app/src/main/res/values/themes.xml
+++ b/Android_App_Code/app/src/main/res/values/themes.xml
@@ -144,4 +144,9 @@
         <item name="fontFamily">@font/ibmplexsansregular</item>
     </style>
 
+    <style name="roundedImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">@dimen/dashboard_button_corner_radius</item>
+    </style>
+
 </resources>
