[FIX-UI] Welcome Screen

--- a/Android_App_Code/app/src/main/res/layout/activity_group_details.xml
+++ b/Android_App_Code/app/src/main/res/layout/activity_group_details.xml
@@ -52,6 +52,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/detailsLayout"
+        android:overScrollMode="never"
         android:layout_marginTop="10sp">
 
         <RelativeLayout
@@ -74,13 +75,13 @@
                 android:id="@+id/group_name_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20sp"
+                android:layout_marginTop="15sp"
                 android:orientation="vertical"
                 android:layout_below="@id/group_icon">
 
                 <TextView
                     android:id="@+id/group_name"
-                    style="@style/text_heading"
+                    style="@style/text_heading_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/sample_group_name" />
