--- a/Android_App_Code/app/src/main/res/layout/activity_dashboard.xml
+++ b/Android_App_Code/app/src/main/res/layout/activity_dashboard.xml
@@ -93,6 +93,7 @@
                     android:layout_marginStart="5sp"
                     android:layout_weight="1"
                     android:padding="15sp"
+                    android:onClick="joinGroup"
                     android:background="@drawable/button_dashboard"
                     android:text="@string/join_group" />
 
