--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -332,7 +332,7 @@ input {
 }
 
 .logo-container {
-  width: 60%;
+  width: 30%;
 }
 
 /****************************/
@@ -348,7 +348,7 @@ input {
 
 .main-nav-link:link,
 .main-nav-link:visited {
-  display: inline-block;
+  display: block;
   text-decoration: none;
   color: #fff;
   font-weight: 500;
